fix form btn alignment

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
 
 .App-content {
   background-color: #fff;
+  margin-bottom: 5em;
 }
 
 h1 {
